CD/Deployment-Manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-app-service
spec:
  selector:
    app: streamlit-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8501
  type: NodePort
