CD/Deployment-Manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: backend.amanpathakdevops.study
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-app
                port:   
                  number: 80
          - path: /monitor
            pathType: Prefix
            backend:
              service: 
                name: 
                port: 
                  number: 8090
